@@ -103,13 +103,40 @@
 	<xsl:text>&#10;</xsl:text>
 </xsl:template>
 
-
 <xsl:template match="section/section/title">
 	<xsl:text>.SS </xsl:text>
 	<xsl:apply-templates/>
 	<xsl:text>&#10;</xsl:text>
 </xsl:template>
 
+<xsl:template match="section/section/section/title">
+	<xsl:text>.TP&#10;</xsl:text>
+	<xsl:choose>
+		<xsl:when test="parent::section//cmdsynopsis/command/text() = text()">
+			<xsl:apply-templates select="parent::section//cmdsynopsis/*"/>
+		</xsl:when>
+		<xsl:otherwise>
+			<xsl:text>.B </xsl:text>
+			<xsl:apply-templates/>
+		</xsl:otherwise>
+	</xsl:choose>
+	<xsl:text>&#10;.RS&#10;</xsl:text>
+</xsl:template>
+
+<xsl:template match="section/section/section">
+	<xsl:apply-templates/>
+	<xsl:text>.RE&#10;</xsl:text>
+</xsl:template>
+
+<xsl:template match="section/section/section//cmdsynopsis">
+	<xsl:choose>
+		<xsl:when test="parent::section/title/text() = command/text()">
+		</xsl:when>
+		<xsl:otherwise>
+			<xsl:apply-templates/>
+		</xsl:otherwise>
+	</xsl:choose>
+</xsl:template>
 
 <!-- fvwmopt -->
 <xsl:template match="fvwmopt">
